--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "start": "vite",
+  "build": "tsc -b && vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
+
   "dependencies": {
     "@tanstack/react-query": "^5.59.20",
     "react": "^18.3.1",
@@ -27,4 +29,6 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   }
+
+  
 }
