--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.84.0",
+    "@tanstack/react-router": "^1.85.0",
+    "@tanstack/router-vite-plugin": "^1.84.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
